--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/ReadingList/AddAsRead.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/ReadingList/AddAsRead.cshtml
@@ -7,7 +7,7 @@
 
 @model ReadingListAddInputModel
 
-<div class="container">
+<div class="container d-flex justify-content-center">
     <div class="row">
         <div class="col-md-9 col-sm-6 col-xs-12 min-vw-50">      
             <form asp-action="AddAsRead" method="post">
@@ -24,7 +24,7 @@
                 </div>
                 <div>
                     <label for="DateFinished">Date Finished</label>
-                    <input asp-for="DateFinished" placeholder="dd-MM-yyyy" class="form-control" />
+                    <input asp-for="@Model.DateFinished" placeholder="dd-MM-yyyy" class="form-control" />
                     <span asp-validation-for="DateFinished" class="text-danger"></span>
                 </div>
                 <div>
@@ -36,7 +36,7 @@
                 </div>
                 <div>
                     <label for="Review">Review</label>
-                    <textarea asp-for="Review" class="form-control"></textarea>
+                    <textarea asp-for="@Model.Review" class="form-control" style="height: 200px;"></textarea>
                     <span asp-validation-for="Review" class="text-danger"></span>
                 </div>
                 <button type="submit" class="btn btn-primary mt-2">Save</button>
