--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/ReadingList/Edit.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/ReadingList/Edit.cshtml
@@ -39,7 +39,7 @@
                 </div>
                 <div>
                     <label for="Review">Review</label>
-                    <textarea asp-for="Review" class="form-control"></textarea>
+                    <textarea asp-for="Review" class="form-control" style="height: 200px;"></textarea>
                     <span asp-validation-for="Review" class="text-danger"></span>
                 </div>
                 <button type="submit" class="btn btn-primary mt-2">Save</button>
