feat: add functionality for adding or removing friends directly from a review card

--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Shared/_ReviewsPartial.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Shared/_ReviewsPartial.cshtml
@@ -1,12 +1,15 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using BookPlatform.Data.Models
 @using BookPlatform.Core.ViewModels.Review
+@using Microsoft.EntityFrameworkCore
 @model IEnumerable<ReviewViewModel>
 
 @inject UserManager<ApplicationUser> userManager
 
 @{
-    ApplicationUser? currentUser = await userManager.FindByNameAsync(this.User.Identity!.Name!);
+    ApplicationUser? currentUser = await userManager.Users
+        .Include(u => u.Friends)
+        .FirstOrDefaultAsync(u => u.UserName == this.User.Identity!.Name);
 }
 
 <div class="container">
@@ -19,7 +22,9 @@
         {
             <div class="card border-secondary shadow-sm my-3">
                 <div class="card-body mb-0">
-                    <h4 class="card-text me-2">@review.Title</h4>
+                    <a class="book-title card-title" asp-controller="Book" asp-action="Details" asp-route-bookId="@review.BookId">
+                        <h6>@review.Title</h6>
+                    </a>
                 </div>
 
                 <div class="card-body d-flex justify-content-between align-items-center">
@@ -57,7 +62,8 @@
                 
                 <div class="card-footer d-flex justify-content-between">
                     <div class="align-content-start">
-                        @if (currentUser!.Friends.Any(f => f.UserName == review.Author)){
+                        @if (currentUser!.Friends.Any(f => f.UserName == review.Author))
+                        {
                             <a asp-controller="Friend" asp-action="Remove" asp-route-email="@review.AuthorEmail">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red" class="bi bi-person-dash" viewBox="0 0 16 16">
                                     <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7M11 12h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1 0-1m0-7a3 3 0 1 1-6 0 3 3 0 0 1 6 0M8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4" />
@@ -65,7 +71,7 @@
                                 </svg>
                             </a>
                         }
-                        else
+                        else if ((!currentUser!.Friends.Any(f => f.UserName == review.Author)) && currentUser.Email != review.AuthorEmail)
                         {
                             <a asp-controller="Friend" asp-action="Add" asp-route-email="@review.AuthorEmail">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="green" class="bi bi-person-add" viewBox="0 0 16 16">
