--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Review/AllBookReviews.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Review/AllBookReviews.cshtml
@@ -1,5 +1,16 @@
-﻿@using BookPlatform.Core.ViewModels.Review
+﻿@using Microsoft.AspNetCore.Identity
+@using BookPlatform.Data.Models
+@using BookPlatform.Core.ViewModels.Review
+@using Microsoft.EntityFrameworkCore
 @model IEnumerable<ReviewViewModel>
+
+@inject UserManager<ApplicationUser> userManager
+
+@{
+    ApplicationUser? currentUser = await userManager.Users
+        .Include(u => u.Friends)
+        .FirstOrDefaultAsync(u => u.UserName == this.User.Identity!.Name);
+}
 
 <div class="container">
     <div class="col-md-9 col-sm-6 col-xs-12 min-vw-50">
@@ -39,8 +50,28 @@
                     <p class="card-text">@review.Content</p>
                 </div>
 
-                <div class="card-footer d-flex justify-content-end">
-                    <div>
+                <div class="card-footer d-flex justify-content-between">
+                    <div class="align-content-start">
+                        @if (currentUser!.Friends.Any(f => f.UserName == review.Author))
+                        {
+                            <a asp-controller="Friend" asp-action="Remove" asp-route-email="@review.AuthorEmail">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red" class="bi bi-person-dash" viewBox="0 0 16 16">
+                                    <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7M11 12h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1 0-1m0-7a3 3 0 1 1-6 0 3 3 0 0 1 6 0M8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4" />
+                                    <path d="M8.256 14a4.5 4.5 0 0 1-.229-1.004H3c.001-.246.154-.986.832-1.664C4.484 10.68 5.711 10 8 10q.39 0 .74.025c.226-.341.496-.65.804-.918Q8.844 9.002 8 9c-5 0-6 3-6 4s1 1 1 1z" />
+                                </svg>
+                            </a>
+                        }
+                        else if ((!currentUser!.Friends.Any(f => f.UserName == review.Author)) && currentUser.Email != review.AuthorEmail)
+                        {
+                            <a asp-controller="Friend" asp-action="Add" asp-route-email="@review.AuthorEmail">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="green" class="bi bi-person-add" viewBox="0 0 16 16">
+                                    <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.5-5v1h1a.5.5 0 0 1 0 1h-1v1a.5.5 0 0 1-1 0v-1h-1a.5.5 0 0 1 0-1h1v-1a.5.5 0 0 1 1 0m-2-6a3 3 0 1 1-6 0 3 3 0 0 1 6 0M8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4" />
+                                    <path d="M8.256 14a4.5 4.5 0 0 1-.229-1.004H3c.001-.246.154-.986.832-1.664C4.484 10.68 5.711 10 8 10q.39 0 .74.025c.226-.341.496-.65.804-.918Q8.844 9.002 8 9c-5 0-6 3-6 4s1 1 1 1z" />
+                                </svg>
+                            </a>
+                        }
+                    </div>
+                    <div class="align-content-end">
                         @if (review.FavoriteCharacter != null)
                         {
                             <span class="text-secondary">@review.FavoriteCharacter</span>
