fix: fix minor defects

--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/wwwroot/css/site.css
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/wwwroot/css/site.css
@@ -1,5 +1,12 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
+    position: relative;
+    min-height: 100%;
+    overflow-y: scroll;
+}
+
+body {
+    margin-bottom: 60px;
 }
 
 @media (min-width: 768px) {
@@ -8,17 +15,24 @@ html {
   }
 }
 
+.navbar-brand-container {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.navbar-collapse {
+    position: relative;
+}
+
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-  margin-bottom: 60px;
+.btn:not(.btn-link):not(.btn-lg):hover {
+    background-color: orange;
+    border-color: orange;
+    color: white;
 }
 
 a.book-title, a.author, a.genre, a.review-author {
@@ -34,8 +48,3 @@ a.review-author:hover {
     text-decoration: underline;
 }
 
-.btn:not(.btn-link):not(.btn-lg):hover {
-    background-color: orange;
-    border-color: orange;
-    color: white;
-}
