fix: add more information to page AddCharacter

--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Areas/Admin/Views/CharacterManagement/Index.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Areas/Admin/Views/CharacterManagement/Index.cshtml
@@ -10,7 +10,7 @@
     <h1 class="text-start mb-4">Character Management</h1>
 
     <form method="get" asp-area="Admin" asp-controller="BookManagement" asp-action="Index" class="d-inline">
-        <button type="submit" class="btn btn-warning btn-sm" style="width: 150px;">Go back</button>
+        <button type="submit" class="btn btn-dark btn-sm" style="width: 150px;">Go back</button>
     </form>
     <form method="get" asp-area="Admin" asp-controller="CharacterManagement" asp-action="Add" class="d-inline">
         <input type="hidden" name="bookId" value="@bookId" />
