--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/ReadingList/Index.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/ReadingList/Index.cshtml
@@ -1,7 +1,5 @@
 ﻿@using BookPlatform.Core.ViewModels.ReadingList;
-@model IEnumerable<ReadingListViewModel>
-
-<h2>All</h2>
+@model ReadingListPaginatedViewModel
 
 <table class="table table-hover text-start">
     <thead class="table-dark">
@@ -17,7 +15,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var book in Model)
+        @foreach (var book in Model.Books)
         {
             <tr>
                 <td>
@@ -102,3 +100,40 @@
         }
     </tbody>
 </table>
+
+<nav aria-label="Page navigation" class="mt-4">
+    <ul class="pagination">
+        @if (Model.CurrentPage > 1)
+        {
+            <li class="page-item">
+                <a class="page-link" asp-action="Index"
+                   asp-route-currentPage="@(Model.CurrentPage - 1)"
+                   asp-route-entitiesPerPage="@Model.EntitiesPerPage">
+                    Previous
+                </a>
+            </li>
+        }
+
+        @for (int i = 1; i <= Model.TotalPages; i++)
+        {
+            <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
+                <a class="page-link" asp-action="Index"
+                   asp-route-currentPage="@i"
+                   asp-route-entitiesPerPage="@Model.EntitiesPerPage">
+                    @i
+                </a>
+            </li>
+        }
+
+        @if (Model.CurrentPage < Model.TotalPages)
+        {
+            <li class="page-item">
+                <a class="page-link" asp-action="Index"
+                   asp-route-currentPage="@(Model.CurrentPage + 1)"
+                   asp-route-entitiesPerPage="@Model.EntitiesPerPage">
+                    Next
+                </a>
+            </li>
+        }
+    </ul>
+</nav>
