--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Shared/_ReviewsPartial.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Shared/_ReviewsPartial.cshtml
@@ -112,7 +112,10 @@
     else
     {
         <div class="row text-center">
-            <h2>No New Reviews</h2>
+            <h2 class="text-secondary">No New Reviews</h2>
+            <div class="mt-5">
+                <p class="text-secondary">Read more books to get new reviews frequently.</p>
+            </div>            
         </div>
     }
 </div>
