--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Book/Index.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Book/Index.cshtml
@@ -5,6 +5,14 @@
     ViewData["Title"] = "Browse Books";
 }
 
+@section Header {
+    <div class="row text-center">
+        <p class="text-secondary">
+            <span class="fst-italic">“If you don’t like to read, you haven’t found the right book.”</span> - J.K. Rowling
+        </p>
+    </div>
+}
+
 <h2>Browse All Books</h2>
 
 <partial name="_SearchPartial" />
