fix: fix layout and add more information to views

--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Areas/Admin/Views/BookManagement/Index.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Areas/Admin/Views/BookManagement/Index.cshtml
@@ -6,7 +6,7 @@
     <h1 class="text-start mb-4">Book Management</h1>
 
     <form method="get" asp-area="Admin" asp-controller="Home" asp-action="Index" class="d-inline">
-        <button type="submit" class="btn btn-warning btn-sm" style="width: 150px;">Go back</button>
+        <button type="submit" class="btn btn-dark btn-sm" style="width: 150px;">Go back</button>
     </form>
     <form method="get" asp-area="Admin" asp-controller="BookManagement" asp-action="Add" class="d-inline ms-2">
         <button type="submit" class="btn btn-warning btn-sm" style="width: 150px;">Add book</button>
