--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Areas/Admin/Views/UserManagement/Index.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Areas/Admin/Views/UserManagement/Index.cshtml
@@ -14,7 +14,7 @@
     <h1 class="text-start mb-4">User Management</h1>
 
     <form method="get" asp-area="Admin" asp-controller="Home" asp-action="Index" class="d-inline">
-        <button type="submit" class="btn btn-warning btn-sm" style="width: 150px;">Go back</button>
+        <button type="submit" class="btn btn-dark btn-sm" style="width: 150px;">Go back</button>
     </form>
 
     <table class="table table-bordered table-hover mt-4" style="width: 50%">
