--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/ReadingList/Edit.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/ReadingList/Edit.cshtml
@@ -9,8 +9,18 @@
 
 <div class="container">
     <div class="row">
+        <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="card mb-2 shadow-sm" style="width: 100%">
+                <img src="@Model.ImageUrl" class="card-img-top" alt="Cover Image" style="height: 450px; object-fit: cover;">
+            </div>          
+            <div class="d-flex flex-column">
+                <a class="btn btn-dark" asp-controller="ReadingList" asp-action="Index">Go back</a>
+            </div>
+        </div>
         <div class="col-md-9 col-sm-6 col-xs-12 min-vw-50">
+            <h3>@Model.BookTitle</h3>
             <form asp-action="Edit" method="post">
+                @Html.AntiForgeryToken()
                 <input type="hidden" asp-for="BookId" value="@Model.BookId" />
                 <input type="hidden" asp-for="BookTitle" value="@Model.BookTitle" />
                 <input type="hidden" asp-for="ImageUrl" value="@Model.ImageUrl" />
@@ -34,7 +44,7 @@
                             <option value="">Select Character...</option>
                         </select>
                         <span asp-validation-for="@Model.CharacterId" class="text-danger"></span>
-                        <a class="btn btn-info align-content-center mb-2 ms-2" style="height: 50px; width: 150px;" asp-controller="Character" asp-action="Add" asp-route-bookId="@Model.BookId">Add Character</a>
+                        <a class="btn btn-info align-content-center mb-2 ms-2" style="height: 50px; width: 150px;" asp-controller="Character" asp-action="Add" asp-route-bookId="@Model.BookId" asp-route-readingStatusId="@Model.ReadingStatus">Add Character</a>
                     </div>       
                 </div>
                 <div>
