--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Areas/Admin/Views/BookManagement/Edit.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Areas/Admin/Views/BookManagement/Edit.cshtml
@@ -3,6 +3,14 @@
 
 <div class="container">
     <div class="row">
+        <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="card mb-2 shadow-sm" style="width: 100%">
+                <img src="@Model.ImageUrl" class="card-img-top" alt="Cover Image" style="height: 450px; object-fit: cover;">
+            </div>
+            <div class="d-flex flex-column">
+                <a class="btn btn-dark" asp-area="Admin" asp-controller="BookManagement" asp-action="Index">Go back</a>
+            </div>
+        </div>
         <div class="col-md-9 col-sm-6 col-xs-12 min-vw-50">
             <form asp-action="Edit" method="post">
                 <div>
@@ -26,7 +34,7 @@
                 </div>
                 <div>
                     <label for="Description">Description</label>
-                    <input asp-for="Description" class="form-control" />
+                    <textarea asp-for="@Model.Description" class="form-control" style="height: 200px;"></textarea>
                     <span asp-validation-for="Description" class="text-danger"></span>
                 </div>
                 <div>
