--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Book/Details.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Book/Details.cshtml
@@ -68,14 +68,14 @@
 
         <div class="col-md-9 col-sm-6 col-xs-12 min-vw-50">
             <h3>@Model.Title</h3>
-            <a class="author" asp-controller="Book" asp-action="IndexByAuthor" asp-route-author="@Model.Author">@Model.Author</a>
+            <p class="text-start">@Model.Author</p>
             <div class="d-flex flex-row align-content-center mt-3">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="gold" class="bi bi-star-fill" viewBox="0 0 16 16">
                     <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
                 </svg>
-                <p class="mx-2 my-0 py-0">@Model.AverageRating.ToString("F2")</p>
+                <p class="ms-2 my-0 py-0">@Model.AverageRating.ToString("F2")</p>
             </div>
-            <div class="card mt-3 mb-3 shadow-sm">
+            <div class="card mt-3 mb-3 shadow-sm" style="width:100%">
                 <div class="card-body">                                       
                     <p class="card-text">@Model.Description</p>                    
                     <div class="card-footer d-flex align-items-center">
@@ -90,9 +90,7 @@
                     </div>
                 </div>                
             </div>     
-            <a class="genre" asp-controller="Book" asp-action="IndexByGenre" asp-route-genre="@Model.Genre">
-                <p class="text-secondary text-end">@Model.Genre</p>
-            </a>
+            <p class="text-secondary text-end">@Model.Genre</p>
         </div>
     </div>
 </div>
