--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Book/_SearchPartial.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Book/_SearchPartial.cshtml
@@ -1,4 +1,4 @@
-﻿<form asp-action="Search" method="post">
+﻿<form asp-action="Search" method="get">
     <div class="d-flex mb-4 align-items-center" style="width: 500px;">
         <div class="me-2 flex-grow-1">
             <input name="title" class="form-control" style="height: 40px;" placeholder="Search book by title" />
