--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Areas/Admin/Views/BookManagement/Edit.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Areas/Admin/Views/BookManagement/Edit.cshtml
@@ -12,7 +12,7 @@
             </div>
         </div>
         <div class="col-md-9 col-sm-6 col-xs-12 min-vw-50">
-            <form asp-action="Edit" method="post">
+            <form asp-action="Edit" method="post" asp-antiforgery="true">
                 <div>
                     <label for="Title">Title</label>
                     <input asp-for="Title" class="form-control" />
