--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Areas/Admin/Views/CharacterManagement/Add.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Areas/Admin/Views/CharacterManagement/Add.cshtml
@@ -13,7 +13,7 @@
         </div>
         <div class="col-md-9 col-sm-6 col-xs-12 min-vw-50">
             <h3>@Model.BookTitle</h3>
-            <form asp-action="Add" method="post">
+            <form asp-action="Add" method="post" asp-antiforgery="true">
                 <input type="hidden" name="bookId" value="@Model.BookId" />
                 <input type="hidden" name="bookTitle" value="@Model.BookTitle" />
                 <input type="hidden" name="imageUrl" value="@Model.ImageUrl" />
