--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/ReadingList/Index.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/ReadingList/Index.cshtml
@@ -57,7 +57,7 @@
                 </td>                
                 <td>
                     @if (book.FavoriteCharacter != null) {
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red" class="bi bi-heart-fill me-1 mb-n1" viewBox="0 0 16 16">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="pink" class="bi bi-heart-fill me-1 mb-n1" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314" />
                         </svg>
 
@@ -75,7 +75,7 @@
                     <div class="col d-flex justify-content-between">
                         @if (book.ReadingStatusId != 1)
                         {
-                            <a asp-controller="Book" asp-action="Details" asp-route-bookId="@book.BookId" class="btn btn-warning">
+                            <a asp-controller="Book" asp-action="Details" asp-route-bookId="@book.BookId" class="btn btn-outline-dark text-dark">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pen" viewBox="0 0 16 16">
                                     <path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001m-.644.766a.5.5 0 0 0-.707 0L1.95 11.756l-.764 3.057 3.057-.764L14.44 3.854a.5.5 0 0 0 0-.708z" />
                                 </svg>
@@ -83,13 +83,13 @@
                         }
                         else
                         {
-                            <a asp-controller="ReadingList" asp-action="Edit" asp-route-bookId="@book.BookId" asp-route-readingStatusId="@book.ReadingStatusId" class="btn btn-warning">
+                            <a asp-controller="ReadingList" asp-action="Edit" asp-route-bookId="@book.BookId" asp-route-readingStatusId="@book.ReadingStatusId" class="btn btn-outline-dark text-dark">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pen" viewBox="0 0 16 16">
                                     <path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001m-.644.766a.5.5 0 0 0-.707 0L1.95 11.756l-.764 3.057 3.057-.764L14.44 3.854a.5.5 0 0 0 0-.708z" />
                                 </svg>
                             </a>
                         }
-                        <a asp-controller="ReadingList" asp-action="Remove" asp-route-bookId="@book.BookId" class="btn btn-danger">
+                        <a asp-controller="ReadingList" asp-action="Remove" asp-route-bookId="@book.BookId" class="btn btn-outline-dark text-dark">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
                                 <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z" />
                             </svg>
@@ -102,11 +102,11 @@
 </table>
 
 <nav aria-label="Page navigation" class="mt-4">
-    <ul class="pagination">
+    <ul class="pagination justify-content-end">
         @if (Model.CurrentPage > 1)
         {
             <li class="page-item">
-                <a class="page-link" asp-action="Index"
+                <a class="page-link text-secondary bg-light" asp-action="Index"
                    asp-route-currentPage="@(Model.CurrentPage - 1)"
                    asp-route-entitiesPerPage="@Model.EntitiesPerPage">
                     Previous
@@ -117,7 +117,7 @@
         @for (int i = 1; i <= Model.TotalPages; i++)
         {
             <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
-                <a class="page-link" asp-action="Index"
+                <a class="page-link text-secondary bg-light" asp-action="Index"
                    asp-route-currentPage="@i"
                    asp-route-entitiesPerPage="@Model.EntitiesPerPage">
                     @i
@@ -128,7 +128,7 @@
         @if (Model.CurrentPage < Model.TotalPages)
         {
             <li class="page-item">
-                <a class="page-link" asp-action="Index"
+                <a class="page-link text-secondary bg-light" asp-action="Index"
                    asp-route-currentPage="@(Model.CurrentPage + 1)"
                    asp-route-entitiesPerPage="@Model.EntitiesPerPage">
                     Next
