--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Review/AllBookReviews.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Review/AllBookReviews.cshtml
@@ -111,7 +111,7 @@
                             @if (review.FavoriteCharacter != null)
                             {
                                 <span class="text-secondary">@review.FavoriteCharacter</span>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red" class="bi bi-heart-fill ms-1 mb-n1" viewBox="0 0 16 16">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="pink" class="bi bi-heart-fill ms-1 mb-n1" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314" />
                                 </svg>
                             }
