--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Shared/_IndexFriendsPartial.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Shared/_IndexFriendsPartial.cshtml
@@ -8,7 +8,7 @@
         <div class="row">
             @foreach (FriendBookViewModel friendBook in Model)
             {
-                <div class="col-md-4 my-5 flex-shrink-0">
+                <div class="col-md-4 mt-4 mb-5 flex-shrink-0">
                     <p>
                         <strong>@friendBook.FriendUserName</strong><br>
                         @if (friendBook.ReadingStatusDescription == "Read")
