change site name

--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Shared/_Layout.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
                         }                        
                     </ul>
                     <div class="navbar-brand-container">
-                        <a class="navbar-brand" asp-area="" asp-controller="Book" asp-action="Index"><strong>SIMPLE READS</strong></a>
+                        <a class="navbar-brand" asp-area="" asp-controller="Book" asp-action="Index"><strong>SIMPLE READS // EXTENDED</strong></a>
                     </div>       
                     <partial name="_LoginPartial" />
                 </div>                
