style: rearrange table view for user's reading list

--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/ReadingList/Index.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/ReadingList/Index.cshtml
@@ -2,11 +2,10 @@
 @model ReadingListPaginatedViewModel
 
 <table class="table table-hover text-start">
-    <thead class="table-dark">
+    <thead>
         <tr>
-            <th class="col-1 text-center">Cover</th>
+            <th class="col-1"></th>
             <th class="col-2 text-wrap">Title</th>
-            <th class="col-2 text-wrap">Author</th>
             <th class="col-2">My Rating</th>
             <th class="col-1">Character</th>
             <th class="col-2 text-center">Status</th>
@@ -25,10 +24,10 @@
                 </td>                    
                 <td>
                     <a class="book-title" asp-controller="Book" asp-action="Details" asp-route-bookId="@book.BookId">
-                        @book.BookTitle
-                    </a>                    
+                        <h6>@book.BookTitle</h6>
+                    </a>
+                    <p>@book.Author</p>
                 </td>
-                <td>@book.Author</td>
                 <td>
                     @if (book.Rating != null)
                     {
