--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Home/Index.cshtml
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/Views/Home/Index.cshtml
@@ -2,6 +2,10 @@
     ViewData["Title"] = "Home Page";
 }
 
+@section CustomCss {
+    <link rel="stylesheet" href="~/css/home.css" />
+}
+
 <div class="container">
     <div class="col">
         <div class="text-start align-items-center">
