--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Web/wwwroot/css/home.css
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Web/wwwroot/css/home.css
@@ -1,5 +1,7 @@
 body {
-    background-color: darkblue;
+    --hdr-gradient: linear-gradient( to right in oklab, oklch(70% 0.5 340) 0%, oklch(90% 0.5 200) 100% );
+    --sdr-gradient: linear-gradient(to right, #ff00fa 0%, #0ff 100%);
+    background: var(--hdr-gradient);
 }
 
 h1 {
